outputs/main/hsevo-qd_bpp_online_2025-08-07_20-28-05/problem_iter23_response5.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    if _selection_counts? _selection_counts is None or _selection_counts.shape[0] != n:
                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    if _selection_counts? _selection_counts is None or _selection_counts.shape[0] != n:
                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    if _selection_counts? _selection_counts is None or _selection_counts.shape[0] != n:
                        ^
SyntaxError: invalid syntax
